--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-image: url("https://img.freepik.com/premium-vector/abstract-watercolor-vector-illustration-with-geometric-shapes-splashes-paint-pattern_118195-683.jpg?w=826");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .App-logo {
@@ -35,4 +40,39 @@
   to {
     transform: rotate(360deg);
   }
+}
+.heading{
+  color:#282c34;
+  font-size: 14px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+}
+nav{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 15vh;
+  background-color: #91c1ce;
+  width: 100%;
+  padding: 12px;
+}
+
+.logo{
+  height: 90%;
+  width: 120px
+}
+.empty{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 40vh;
+  justify-content: center;
+  align-items: center;
+}
+.empty-image{
+  height: 200px;
+  width: 200px;
+}
+.empty-text{
+  font-size: 20px;
 }
